[tool.poetry]
name = "workflow_test"
version = "0.1.0"
description = ""
authors = ["silentninja <mmukesh95@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
